--- a/podindex.html
+++ b/podindex.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Strona Internetowa</title>
+        <title>PODStrona Internetowa</title>
         <style>
             body {
                 font-family: Arial, Helvetica, sans-serif;
@@ -44,9 +44,6 @@
         <div class="imagecontainer">
             <img src="images.jpeg" alt="tripi tropi">
         </div>
-        <p>
-            <a href="podindex.html">Przejdź do podstrony index</a>
-        </p>
 
 
     </body>
